--- a/css/style.css
+++ b/css/style.css
@@ -4,22 +4,24 @@
     padding: 0;
     font-family: 'Open Sans', sans-serif;
 }
-
+a{
+    text-decoration: none;
+}
 
 /* Utility */
 .fl {
     float: left;
 }
-.fr {
-    float: right;
-}
-a{
-    text-decoration: none;
-}
+
 .clearfix::after{
     content: "";
     display: table;
     clear: both;
+}
+.button-blue{
+    background-color: rgb(0, 97, 255);
+    color: white;
+    text-align: center;
 }
 
 
@@ -53,36 +55,34 @@ text-align: right;
 nav a {
     color: black;
 }
-nav ul:last-child li:last-of-type a,.content-left > a {
-    background-color: rgb(0, 97, 255);
+nav ul:last-child li:last-of-type a,.content-left-0 > a {
     padding: 7px 12px;
-    color: white;
 }
 /* Contenuto header */
-header > .container {
+.container-0 {
     height: 100%;
     width: 1100px;
     margin: 0 auto;
 }
-header .title {
+.title-0 {
     font-size: 50px;
     font-weight: bold;
     padding: 30px 0 20px 0;
 }
-header .content-left{
+.content-left-0{
 width: 30%;
 }
-header .content-right{
+.content-right-0{
     width: 70%;
 }
-header .content-right img{
+.content-right-0 img{
    width: 100%;
 }
-header .content-left > .button {
+.content-left-0 > .button-blue {
     display: inline-block;
     margin: 20px 0 10px 0;
 }
-header .button + div{
+.content-left-0 > .button-blue + div{
  font-size: small;
  margin-bottom: 20px;
 }
@@ -91,7 +91,9 @@ header .button + div{
 }
 
 
-/*--- Sezione1 ---*/
+/*--- Sezione-1 ---*/
+
+/* layout delle tre colonne */
 section{
     margin: 200px auto;
     width: 1100px;
@@ -101,7 +103,7 @@ section{
     font-size: 40px;
     margin: 0 0 30px 0;
 }
-.section-1 > label{
+.section1 > label{
     margin: 0 10px 0 0;
 }
 .tariffe{
@@ -112,7 +114,7 @@ section{
     border: 1px solid black;
     margin-bottom: 50px;
 }
-.box-center{
+.box-center-1{
     margin: 0 30px;
 }
 .tariffa{
@@ -120,13 +122,13 @@ section{
     padding: 10px 0;
     text-align: center;
 }
-.content-box{
+.content-box-1{
     padding: 20px 20px 0 20px;
 }
 .tariffe ul {
     list-style: none;
 }
-.title-box{
+.title-box-1{
     font-size: 25px;
     font-weight: bold;
 }
@@ -145,30 +147,28 @@ section{
 .specifiche > li{
     padding: 10px 0;
 }
-.button-prova,.super-box .content-right{
-    background-color: rgb(0, 97, 255);
-    text-align: center;
+ .section1 .button-blue{
     padding: 10px 0;
 }
-.button-prova{
+div[class^="box-"] .button-blue{
     margin:40px 0 20px 0 ;
 }
-.button-prova > a,.super-box  a{
+.section1 .button-blue > a{
     color: white;
 } 
 .link-standard{
     color: rgb(0, 110, 255);
     border-bottom: 1px solid rgb(0, 110, 255) ;
 }
-.content-box > span{
+.content-box-1 > span{
     display: inline-block;
     padding-bottom: 30px;
     margin-bottom: 30px;
     border-bottom: 1px solid lightgray;
 }
-.title-2{
+.sub-title-1{
     font-size: 20px;
-    font-weight: 800;
+    font-weight: bold;
 }
 .vantaggi{
     height: 350px;
@@ -180,49 +180,52 @@ section{
 .vantaggi > li{
     margin: 10px 0;
 }
-.super-box{
+/* Box inferiore della prima sezione */
+.super-box-1{
     border: 1px solid black;
     width: 100%;
 }
 .tariffa + div{
     padding: 30px;
-
 }
-.super-box .content-left{
+.super-box-1 .content-left{
     width: 75%;
 }
-.super-box .content-right{
+.super-box-1 .content-right{
     width: 25%;
 }
-.title-box + div{
+.title-box-1 + div{
     margin: 15px 0;
     font-size: 18px;
     font-weight: bold;
 }
+
 /*--- sezione2 ---*/
 .section2 > div[class^="conteiner"]{
     width: calc(100% / 2);
 }
+/* Contenuto sinistro */
 .section2 img{
     width: 100%;
 }
-.conteiner-right{
+/* Contenuto destro */
+.conteiner-right-2{
 height: 470px;
 position: relative;
 }
-.conteiner-right > div{
+.conteiner-right-2 > div{
     width: 80%;
     transform: translate(0, -50%);
     position: absolute;
     top: 50%;
     padding-left: 60px;
 }
-.title-section2{
+.title-2{
     font-size: 25px;
     font-weight: bold;
     margin-bottom: 20px;
 }
-.title-section2 + div{
+.title-2 + div{
     margin-bottom: 40px;
 }
 .section2 a {
@@ -235,7 +238,7 @@ position: relative;
 .section3{
     width: 1000px;
 }
-.title-section3{
+.title-3{
     font-size: 45px;
     font-weight: bold;
     margin: 0 0 30px 0;
@@ -247,15 +250,15 @@ position: relative;
     width: 100%;
     text-align: center;
 }
-.section3 .box-center{
+.box-center-3{
     margin: 0 40px;
 } 
-.section3 .sub-title{
+.sub-title-3{
     margin: 10px 0;
     font-size: 30px;
     font-weight: bold;
 }
-.top,.bottom{
+.top-3,.bottom-3{
     margin-bottom: 100px;
 }
 
@@ -310,32 +313,32 @@ position: relative;
     background-color: rgb(255, 216, 48 );
     border: 10px solid rgb(255, 235, 152);
 }
-.simbolo{
+.simbolo-4{
     width: 80px;
     margin: 20px 0;
 }
-.simbolo + div{
+.simbolo-4 + div{
     width: 40px;
     border-bottom: 2px solid lightgray;
     margin-bottom: 20px;
 }
-.autore{
+.autore-4{
     font-size: 14px;
     margin: 20px 0;
 }
-.bottom-logo{
+.content-bottom-4{
     width:100%;
     background-color: rgb(180, 208, 231 );
     color: rgb(97, 8, 43);
     padding: 80px;
     text-align: center;
 }
-.bottom-logo > div{
+.content-bottom-4 > div{
 display: inline-block;
 font-weight: bold;
 font-size: 30px;
 }
-.bottom-logo > a{
+.content-bottom-4 > a{
     color: black;
     padding: 10px;
     background: white;
