--- a/css/style.css
+++ b/css/style.css
@@ -23,7 +23,10 @@ a{
     color: white;
     text-align: center;
 }
-
+.link-standard{
+    color: rgb(0, 110, 255);
+    border-bottom: 1px solid rgb(0, 110, 255) ;
+}
 
 /*--- Header ---*/
 header{
@@ -156,10 +159,6 @@ div[class^="box-"] .button-blue{
 .section1 .button-blue > a{
     color: white;
 } 
-.link-standard{
-    color: rgb(0, 110, 255);
-    border-bottom: 1px solid rgb(0, 110, 255) ;
-}
 .content-box-1 > span{
     display: inline-block;
     padding-bottom: 30px;
@@ -261,7 +260,15 @@ position: relative;
 .top-3,.bottom-3{
     margin-bottom: 100px;
 }
-
+.bottom-3 + div {
+    width: 65%;
+    margin: 50px 0;
+}
+.bottom-3 + div > div{
+    font-size: 45px;
+    font-weight: bold;
+    margin: 0 0 20px 0;
+}
 /*--- Sezione-4 ---*/
 .section4{
     width: 1200px;
