--- a/css/style.css
+++ b/css/style.css
@@ -97,7 +97,7 @@ width: 30%;
 /*--- Sezione-1 ---*/
 
 /* layout delle tre colonne */
-section{
+.section1{
     margin: 200px auto;
     width: 1100px;
 } 
@@ -200,6 +200,10 @@ div[class^="box-"] .button-blue{
 }
 
 /*--- sezione2 ---*/
+.section2{
+    margin: 200px auto;
+    width: 1100px;
+}
 .section2 > div[class^="conteiner"]{
     width: calc(100% / 2);
 }
@@ -271,17 +275,13 @@ position: relative;
     margin: 0 0 20px 0;
 }
 /*--- Sezione-4 ---*/
-.section4{
-    width: 1200px;
-    margin: 0 auto;
-} 
 .father-box{
     width: calc(100% / 3);
-    height: 400px;
+    height: 600px;
 }
 .center{
     background-color: rgb(238, 237, 237);
-    padding: 35px;
+    padding: 50px;
 }
 .section4 div[class^="box-"]{
     width: calc(100% / 2);
@@ -289,7 +289,7 @@ position: relative;
     position: relative;
 }
 .section4 div[class^="box-"] img{
-    width: 60%;
+    width: 50%;
     filter: invert(100%) ;
     position: absolute;
     transform: translate(-50%, -50%);
@@ -322,31 +322,32 @@ position: relative;
     border: 10px solid rgb(255, 235, 152);
 }
 .simbolo-4{
-    width: 80px;
-    margin: 20px 0;
+    width: 130px;
+    margin: 40px 0;
 }
 .simbolo-4 + div{
-    width: 40px;
+    width: 60px;
     border-bottom: 2px solid lightgray;
-    margin-bottom: 20px;
+    margin-bottom: 60px;
 }
 .autore-4{
     font-size: 14px;
-    margin: 20px 0;
+    margin: 50px 0;
 }
 .content-bottom-4{
     width:100%;
     background-color: rgb(180, 208, 231 );
     color: rgb(97, 8, 43);
-    padding: 80px;
+    padding: 150px;
     text-align: center;
 }
 .content-bottom-4 > div{
 display: inline-block;
 font-weight: bold;
-font-size: 30px;
+font-size: 50px;
 }
 .content-bottom-4 > a{
+    font-size: 20px;
     color: black;
     padding: 10px;
     background: white;
